Fix: Updated Visual Bug on Mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -327,8 +327,9 @@ html {
 @media (max-width: 1000px) {
     .navbar {
         padding: 10px 20px;
-        position: relative;
+        position: fixed;
         flex-wrap: wrap;
+        align-items: center;
     }
 
     .logo a {
